# parallel-future

./: Cargo.toml  README.md
src/: future.rs  lib.rs
