[package]
name = "tasky"
version = "3.0.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/tasky"
documentation = "https://docs.rs/tasky"
description = "fluent async task experiments"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <rust@yosh.is>"
]

[features]

[dependencies]
async-std = { version = "1.10.0", features = ["unstable"] }
pin-project = "1.0.10"

[dev-dependencies]
