[package]
name = "parallel-future"
version = "6.0.3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/parallel-future"
documentation = "https://docs.rs/parallel-future"
description = "fluent async task experiments"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = ["Yoshua Wuyts <rust@yosh.is>"]

[features]

[dependencies]
async-std = { version = "1.10.0", features = ["unstable"] }
futures-concurrency = "7.5.0"
pin-project = "1.0.10"

[dev-dependencies]
